<resources>
    <string name="app_name">P2p1diego</string>
    <string name="rmasculino">Masculino</string>
    <string name="rfemenino">Femenino</string>
    <string name="bmensaje">Mensaje</string>
    <string name="Letrero1">Numero num1</string>
    <string name="Letero2">Numero num2</string>
    <string name="msuma">Suma</string>
    <string name="mresta">Resta</string>
    <string name="mmultiplicacion">Multiplicacion</string>
    <string name="mdivision">Division</string>
    <string name="mresultado"></string>
</resources>
