<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rmasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rmasculino" />

        <RadioButton
            android:id="@+id/rfemenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rfemenino" />
    </RadioGroup>

    <Button
        android:id="@+id/btnmensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/bmensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/txtnum1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/Letrero1"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmensaje" />

    <EditText
        android:id="@+id/txtnum2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Letero2"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum2">

        <RadioButton
            android:id="@+id/suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/msuma" />

        <RadioButton
            android:id="@+id/Resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mresta" />

        <RadioButton
            android:id="@+id/Multiplicación"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mmultiplicacion" />

        <RadioButton
            android:id="@+id/División"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mdivision" />
    </RadioGroup>

    <TextView
        android:id="@+id/result"
        android:layout_width="229dp"
        android:layout_height="99dp"
        android:layout_marginTop="48dp"
        android:text="@string/mresultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />
</androidx.constraintlayout.widget.ConstraintLayout>